<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.adyen.checkout.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/orderDetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/orderAmountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="Order Amount"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/orderAmountEntry"
                    android:layout_width="wrap_content"
                    android:minWidth="100sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orderAmountTitle"
                    android:digits="0123456789,."
                    android:inputType="numberDecimal"
                    android:text="0"
                    android:textSize="50dp"
                    />

                <TextView
                    android:id="@+id/orderCurrencyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="Order Currency"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/orderCurrencyEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orderCurrencyTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:inputType="textCapCharacters"
                    android:maxLength="3"
                    android:text="EUR"
                    android:textSize="50dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/countryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/countryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="Country"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/countryEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:inputType="textCapCharacters"
                    android:maxLength="2"
                    android:text="NL"
                    android:textSize="20dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/shopperLocaleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/shopperLocaleTitle"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Shopper Locale"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/shopperLocaleEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/shopperLocaleTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:maxLength="5"
                    android:text="nl_NL"
                    android:textSize="20dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/merchantAccountLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/merchantAccountTitle"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Merchant Account"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/merchantAccountEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/merchantAccountTitle"
                    android:layout_alignParentRight="true"
                    android:text="TestMerchant"
                    android:textSize="20dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/shopperReferenceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/shopperReferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="Shopper Reference"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/shopperReferenceEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="shopper reference"
                    android:textSize="20dp"
                    />
                </RelativeLayout>

            <RelativeLayout
                android:id="@+id/referenceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/referenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reference"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/referenceEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="reference"
                    android:textSize="20dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/installments_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/installmentsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Maximum Number of Installments"
                    android:textSize="20dp"/>

                <Spinner
                    android:id="@+id/installmentsEntry"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginBottom="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/installmentsTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:entries="@array/installment_options"
                />

                <Button
                    android:id="@+id/proceed_button"
                    android:layout_width="250dp"
                    android:layout_height="62.5dp"
                    android:layout_below="@id/installmentsEntry"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:text="PAY">
                </Button>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
